@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -29,6 +29,7 @@ import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import io.spring.initializr.generator.buildsystem.BillOfMaterials;
 import io.spring.initializr.generator.buildsystem.Dependency;
@@ -37,6 +38,7 @@ import io.spring.initializr.generator.buildsystem.DependencyContainer;
 import io.spring.initializr.generator.buildsystem.DependencyScope;
 import io.spring.initializr.generator.buildsystem.MavenRepository;
 import io.spring.initializr.generator.buildsystem.PropertyContainer;
+import io.spring.initializr.generator.buildsystem.gradle.GradleTask.Attribute.Type;
 import io.spring.initializr.generator.io.IndentingWriter;
 import io.spring.initializr.generator.version.VersionProperty;
 
@@ -59,23 +61,24 @@ public abstract class GradleBuildWriter {
 	 */
 	public final void writeTo(IndentingWriter writer, GradleBuild build) {
 		GradleBuildSettings settings = build.getSettings();
-		writeImports(writer, build.tasks());
+		writeImports(writer, build.tasks(), build.snippets());
 		writeBuildscript(writer, build);
 		writePlugins(writer, build);
 		writeProperty(writer, "group", settings.getGroup());
 		writeProperty(writer, "version", settings.getVersion());
-		writeJavaSourceCompatibility(writer, settings);
 		writer.println();
+		writeJavaSourceCompatibility(writer, settings);
 		writeConfigurations(writer, build.configurations());
 		writeRepositories(writer, build);
 		writeProperties(writer, build.properties());
 		writeDependencies(writer, build);
 		writeBoms(writer, build);
 		writeTasks(writer, build.tasks());
+		writeSnippets(writer, build.snippets());
 	}
 
-	private void writeImports(IndentingWriter writer, GradleTaskContainer tasks) {
-		List<String> imports = tasks.importedTypes().sorted().collect(Collectors.toList());
+	private void writeImports(IndentingWriter writer, GradleTaskContainer tasks, GradleSnippetContainer snippets) {
+		List<String> imports = Stream.concat(tasks.importedTypes(), snippets.importedTypes()).sorted().toList();
 		imports.forEach((importedType) -> writer.println("import " + importedType));
 		if (!imports.isEmpty()) {
 			writer.println();
@@ -87,8 +90,11 @@ public abstract class GradleBuildWriter {
 	protected abstract void writePlugins(IndentingWriter writer, GradleBuild build);
 
 	protected List<StandardGradlePlugin> extractStandardPlugin(GradleBuild build) {
-		return build.plugins().values().filter(StandardGradlePlugin.class::isInstance)
-				.map(StandardGradlePlugin.class::cast).collect(Collectors.toList());
+		return build.plugins()
+			.values()
+			.filter(StandardGradlePlugin.class::isInstance)
+			.map(StandardGradlePlugin.class::cast)
+			.collect(Collectors.toList());
 	}
 
 	protected abstract void writeJavaSourceCompatibility(IndentingWriter writer, GradleBuildSettings settings);
@@ -106,10 +112,11 @@ public abstract class GradleBuildWriter {
 		if (properties.isEmpty()) {
 			return;
 		}
-		Map<String, String> allProperties = new LinkedHashMap<>(properties.values().collect(Collectors
-				.toMap(Map.Entry::getKey, Map.Entry::getValue, (oldValue, newValue) -> newValue, TreeMap::new)));
+		Map<String, String> allProperties = new LinkedHashMap<>(properties.values()
+			.collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (oldValue, newValue) -> newValue,
+					TreeMap::new)));
 		properties.versions(this::getVersionPropertyKey)
-				.forEach((entry) -> allProperties.put(entry.getKey(), "\"" + entry.getValue() + "\""));
+			.forEach((entry) -> allProperties.put(entry.getKey(), "\"" + entry.getValue() + "\""));
 		writeExtraProperties(writer, allProperties);
 	}
 
@@ -123,7 +130,7 @@ public abstract class GradleBuildWriter {
 		Set<Dependency> sortedDependencies = new LinkedHashSet<>();
 		DependencyContainer dependencies = build.dependencies();
 		sortedDependencies
-				.addAll(filterDependencies(dependencies, (scope) -> scope == null || scope == DependencyScope.COMPILE));
+			.addAll(filterDependencies(dependencies, (scope) -> scope == null || scope == DependencyScope.COMPILE));
 		sortedDependencies.addAll(filterDependencies(dependencies, hasScope(DependencyScope.COMPILE_ONLY)));
 		sortedDependencies.addAll(filterDependencies(dependencies, hasScope(DependencyScope.RUNTIME)));
 		sortedDependencies.addAll(filterDependencies(dependencies, hasScope(DependencyScope.ANNOTATION_PROCESSOR)));
@@ -163,32 +170,25 @@ public abstract class GradleBuildWriter {
 		if (type == null) {
 			return "implementation";
 		}
-		switch (type) {
-		case ANNOTATION_PROCESSOR:
-			return "annotationProcessor";
-		case COMPILE:
-			return "implementation";
-		case COMPILE_ONLY:
-			return "compileOnly";
-		case PROVIDED_RUNTIME:
-			return "providedRuntime";
-		case RUNTIME:
-			return "runtimeOnly";
-		case TEST_COMPILE:
-			return "testImplementation";
-		case TEST_RUNTIME:
-			return "testRuntimeOnly";
-		default:
-			throw new IllegalStateException("Unrecognized dependency type '" + type + "'");
-		}
+		return switch (type) {
+			case ANNOTATION_PROCESSOR -> "annotationProcessor";
+			case COMPILE -> "implementation";
+			case COMPILE_ONLY -> "compileOnly";
+			case PROVIDED_RUNTIME -> "providedRuntime";
+			case RUNTIME -> "runtimeOnly";
+			case TEST_COMPILE -> "testImplementation";
+			case TEST_RUNTIME -> "testRuntimeOnly";
+		};
 	}
 
 	private void writeBoms(IndentingWriter writer, GradleBuild build) {
 		if (build.boms().isEmpty()) {
 			return;
 		}
-		List<BillOfMaterials> boms = build.boms().items()
-				.sorted(Comparator.comparingInt(BillOfMaterials::getOrder).reversed()).collect(Collectors.toList());
+		List<BillOfMaterials> boms = build.boms()
+			.items()
+			.sorted(Comparator.comparingInt(BillOfMaterials::getOrder).reversed())
+			.collect(Collectors.toList());
 		writer.println();
 		writer.println("dependencyManagement {");
 		writer.indented(() -> writeNestedCollection(writer, "imports", boms, this::bomAsString));
@@ -201,7 +201,7 @@ public abstract class GradleBuildWriter {
 
 	protected final void writeTaskCustomization(IndentingWriter writer, GradleTask task) {
 		writeCollection(writer, task.getInvocations(), this::invocationAsString);
-		writeMap(writer, task.getAttributes(), (key, value) -> key + " = " + value);
+		writeCollection(writer, task.getAttributes(), this::attributeAsString);
 		task.getNested().forEach((property, nestedCustomization) -> {
 			writer.println(property + " {");
 			writer.indented(() -> writeTaskCustomization(writer, nestedCustomization));
@@ -209,7 +209,22 @@ public abstract class GradleBuildWriter {
 		});
 	}
 
+	private String attributeAsString(GradleTask.Attribute attribute) {
+		String separator = (attribute.getType() == Type.SET) ? "=" : "+=";
+		return String.format("%s %s %s", attribute.getName(), separator, attribute.getValue());
+	}
+
 	protected abstract String invocationAsString(GradleTask.Invocation invocation);
+
+	private void writeSnippets(IndentingWriter writer, GradleSnippetContainer snippets) {
+		if (!snippets.isEmpty()) {
+			writer.println();
+		}
+		snippets.values().forEach((snippet) -> {
+			snippet.apply(writer);
+			writer.println();
+		});
+	}
 
 	protected final <T> void writeNestedCollection(IndentingWriter writer, String name, Collection<T> collection,
 			Function<T, String> itemToStringConverter) {
@@ -252,8 +267,10 @@ public abstract class GradleBuildWriter {
 
 	private Collection<Dependency> filterDependencies(DependencyContainer dependencies,
 			Predicate<DependencyScope> filter) {
-		return dependencies.items().filter((dep) -> filter.test(dep.getScope())).sorted(getDependencyComparator())
-				.collect(Collectors.toList());
+		return dependencies.items()
+			.filter((dep) -> filter.test(dep.getScope()))
+			.sorted(getDependencyComparator())
+			.collect(Collectors.toList());
 	}
 
 }
